# evaluation_finale

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: classroom.yml
serveur-test/: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_validation.py
